--- a/index.html
+++ b/index.html
@@ -1,174 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NA Organic Store</title>
-    <link rel="stylesheet" href="style.css" />
-    <meta
-      name="description"
-      content="Transform your hair naturally with NA Organic Store's premium herbal products."
-    />
-    <meta
-      name="keywords"
-      content="herbal products, organic hair care, natural hair oil, organic shampoo"
-    />
-    <meta name="author" content="NA Organic Store" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Montserrat:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header>
-      <div class="header-content">
-        <h1>NA Organic Store</h1>
-        <p>Transform Your Hair Naturally</p>
-        <nav>
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#products">Products</a></li>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </nav>
-        <div class="cta-buttons">
-          <button class="cta-button">Shop Now</button>
-          <button class="cta-button secondary">Learn More</button>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="style.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+</head>
+<body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">NA Organic Store</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#products">Products</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+            </div>
         </div>
-      </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <header id="home" class="hero-section">
+        <div class="container">
+            <div class="row min-vh-100 align-items-center">
+                <div class="col-md-8 mx-auto text-center">
+                    <div class="hero-content">
+                        <h1 class="display-4 mb-4">Welcome to NA Organic Store</h1>
+                        <p class="lead mb-4">Transform Your Hair Naturally</p>
+                        <div class="cta-buttons">
+                            <button class="btn btn-primary btn-lg me-3">Shop Now</button>
+                            <button class="btn btn-outline-primary btn-lg">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
 
     <!-- Video Section -->
-    <section id="videos">
-      <div class="video-content">
-        <div class="video-description">
-          <h2>Watch Our Videos</h2>
-          <p>
-            Discover how our products are made and the benefits they offer for
-            your hair.
-          </p>
+    <section id="videos" class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h2 class="mb-4">Watch Our Videos</h2>
+                    <p class="lead">Discover how our products are made and their benefits for your hair.</p>
+                </div>
+                <div class="col-lg-6">
+                    <div class="row">
+                        <div class="col-md-6 mb-4">
+                            <div class="video-wrapper">
+                                <video autoplay loop muted class="w-100">
+                                    <source src="assets/making.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-4">
+                            <div class="video-wrapper">
+                                <video autoplay loop muted class="w-100">
+                                    <source src="assets/product.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="video-container">
-          <div class="video-wrapper">
-            <video id="video1" autoplay loop muted>
-              <source src="assets/making.mp4" type="video/mp4" />
-              Your browser does not support the video tag.
-            </video>
-          </div>
-          <div class="video-wrapper">
-            <video id="video2" autoplay loop muted>
-              <source src="assets/product.mp4" type="video/mp4" />
-              Your browser does not support the video tag.
-            </video>
-          </div>
-        </div>
-      </div>
     </section>
 
-    <main>
-      <section id="home" class="active">
-        <div class="hero-overlay">
-          <div class="hero-content">
-            <h2>Welcome to NA Organic Store</h2>
-            <p>Your Destination for Natural Hair Care</p>
-            <p>
-              Discover the power of organic ingredients that nurture your hair
-              and bring out its natural beauty.
-            </p>
-            <div class="cta-buttons">
-              <button class="cta-button">Shop Now</button>
-              <button class="cta-button secondary">Learn More</button>
+    <!-- Products Section -->
+    <section id="products" class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-5">Our Products</h2>
+            <div class="row" id="product-list">
+                <!-- Products will be dynamically loaded here -->
             </div>
-          </div>
         </div>
-        <!-- Product Preview Container -->
-        <div class="product-preview-container">
-            <h3>Our Featured Products</h3>
-            <div class="product-previews" id="product-preview-list">
-              <!-- Dynamically populated products go here -->
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="py-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <img src="assets/about-us.png" alt="About Us" class="img-fluid rounded shadow">
+                </div>
+                <div class="col-md-6">
+                    <h2 class="mb-4">About Us</h2>
+                    <p class="lead">At NA Organic Store, we believe in the power of nature. Our mission is to provide high-quality, organic hair care products that are effective and sustainable.</p>
+                    <p>Founded on the principles of quality and care, we aim to transform hair care by harnessing the benefits of herbal ingredients.</p>
+                </div>
             </div>
-          </div>
-      </section>
-          
-          <!-- Products Section -->
-          <section id="products">
-            <h2>Our Products</h2>
-            <div id="product-list">
-              <!-- Dynamically populated products go here -->
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 mx-auto">
+                    <h2 class="text-center mb-4">Contact Us</h2>
+                    <form id="contact-form" class="needs-validation" novalidate>
+                        <div class="mb-3">
+                            <input type="text" class="form-control" id="name" placeholder="Your Name" required>
+                        </div>
+                        <div class="mb-3">
+                            <input type="email" class="form-control" id="email" placeholder="Your Email" required>
+                        </div>
+                        <div class="mb-3">
+                            <textarea class="form-control" id="message" rows="4" placeholder="Your Message" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary w-100">Send Message</button>
+                    </form>
+                    <div class="text-center mt-4">
+                        <p>Follow us:</p>
+                        <div class="social-links">
+                            <a href="#" class="me-3"><i class="fab fa-facebook"></i></a>
+                            <a href="#" class="me-3"><i class="fab fa-instagram"></i></a>
+                            <a href="#" class="me-3"><i class="fab fa-twitter"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </section>
-
-      <section id="about">
-        <div class="about-container">
-          <div class="about-image">
-            <img src="assets/about-us.png" alt="About Us Image" />
-          </div>
-          <div class="about-content">
-            <h2>About Us</h2>
-            <p>
-              At NA Organic Store, we believe in the power of nature. Our
-              mission is to provide high-quality, organic hair care products
-              that are effective and sustainable.
-            </p>
-            <p>
-              Founded on the principles of quality and care, we aim to transform
-              hair care by harnessing the benefits of herbal ingredients. Join
-              us on this journey to healthier, happier hair.
-            </p>
-          </div>
         </div>
-      </section>
+    </section>
 
-      <section id="contact">
-        <h2>Contact Us</h2>
-        <p>Have questions or feedback? We'd love to hear from you!</p>
-        <form id="contact-form">
-          <div class="form-group">
-            <label for="name">Name:</label>
-            <input
-              type="text"
-              id="name"
-              name="name"
-              placeholder="Your Name"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <label for="email">Email:</label>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Your Email"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <label for="message">Message:</label>
-            <textarea
-              id="message"
-              name="message"
-              rows="4"
-              placeholder="Your Message"
-              required
-            ></textarea>
-          </div>
-          <button type="submit">Send Message</button>
-        </form>
-        <div class="contact-links">
-          <p>Follow us:</p>
-          <a href="https://facebook.com" target="_blank">Facebook</a> |
-          <a href="https://instagram.com" target="_blank">Instagram</a> |
-          <a href="https://twitter.com" target="_blank">Twitter</a>
+    <!-- Footer -->
+    <footer class="bg-dark text-white py-4">
+        <div class="container text-center">
+            <p class="mb-0">&copy; 2024 NA Organic Store. All rights reserved.</p>
         </div>
-      </section>
-    </main>
-
-    <footer>
-      <p>&copy; 2024 NA Organic Store. All rights reserved.</p>
     </footer>
 
-    <script src="customer.js" defer></script>
-  </body>
+    <!-- Cart Modal -->
+    <div class="modal fade" id="cartModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Shopping Cart</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="cart-items"></div>
+                    <div id="cart-total" class="mt-3"></div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" id="checkout-btn">Checkout</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Bootstrap JS and Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom JS -->
+    <script src="customer.js"></script>
+</body>
 </html>
